# evented

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml
examples/rusty-accounts/: Cargo.toml
examples/rusty-accounts/src/: infra.rs  main.rs
sql/: create_event_log_text.sql  create_event_log_uuid.sql
src/: create_event_log_text.sql  entity.rs  event_log.rs  lib.rs  pool.rs  projection.rs
