[workspace]
members = [
    ".",
    "examples/rusty-accounts",
]

[workspace.dependencies]
anyhow                 = { version = "1.0" }
api-version            = { git = "https://github.com/scndcloud/api-version" }
assert_matches         = { version = "1.5" }
async-stream           = { version = "0.3" }
axum                   = { version = "0.7" }
configured             = { version = "0.7" }
error-ext              = { version = "0.2" }
evented                = { path = "." }
futures                = { version = "0.3" }
opentelemetry          = { version = "0.24" }
opentelemetry_sdk      = { version = "0.24" }
opentelemetry-otlp     = { version = "0.17", default-features = false }
secrecy                = { version = "0.10" }
serde                  = { version = "1.0" }
serde_json             = { version = "1.0" }
serde_with             = { version = "3.12" }
sqlx                   = { version = "0.8" }
testcontainers         = { version = "0.21" }
thiserror              = { version = "2.0" }
time                   = { version = "0.3" }
tokio                  = { version = "1" }
tower                  = { version = "0.5", features = [ "util" ] }
tower-http             = { version = "0.5" }
tracing                = { version = "0.1" }
tracing-opentelemetry  = { version = "0.25" }
tracing-subscriber     = { version = "0.3" }
tracing-test           = { version = "0.2" }
trait-variant          = { version = "0.1" }
utoipa                 = { version = "4.2" }
utoipa-swagger-ui      = { version = "7.1" }
uuid                   = { version = "1.12" }

[package]
name          = "evented"
version       = "0.2.4"
edition       = "2021"
description   = "Event Sourcing in Rust on top of PostgreSQL"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license-file  = "LICENSE"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/evented"
repository    = "https://github.com/hseeberger/evented"
documentation = "https://github.com/hseeberger/evented"

[dependencies]
async-stream  = { workspace = true }
error-ext     = { workspace = true }
futures       = { workspace = true }
secrecy       = { workspace = true, features = [ "serde" ] }
serde         = { workspace = true, features = [ "derive" ] }
serde_json    = { workspace = true }
serde_with    = { workspace = true }
sqlx          = { workspace = true, features = [ "postgres", "runtime-tokio" ] }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
trait-variant = { workspace = true }

[dev-dependencies]
assert_matches         = { workspace = true }
sqlx                   = { workspace = true, features = [ "uuid" ] }
testcontainers         = { workspace = true }
time                   = { workspace = true, features = [ "serde" ] }
tokio                  = { workspace = true }
tracing-test           = { workspace = true }
uuid                   = { workspace = true, features = [ "serde" ] }
